renamed home and about page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 - name: Home
-  link: /
+  link: Basicjekyll/
 - name: About
-  link: /about.html
+  link: Basicjekyll/about.html
 - name: Contents
   link: /contents.html
 - name: Blog
